Add drag n drop section.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -278,6 +278,10 @@ new input types, new attributes (required, ranges)
 
 - navigator.onLine, online and offline events, inherently unreliable
 
+\subsubsection{Drag and Drop}
+
+7.6
+
 \subsection{Notes}
 
 \begin{itemize}
