--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -121,3 +121,12 @@
   type={{W3C} {E}ditor's {D}raft},
   institution={W3C},
 }
+@TechReport{canvas2Ddraft,
+  author={Hickson, I.},
+  title={{HTML} {C}anvas 2{D} {C}ontext},
+  month={Feb},
+  note={Available at: \url{http://dev.w3.org/html5/2dcontext/}. Accessed 2-February-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
