Add session history section in intro.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -318,7 +318,21 @@ new input types, new attributes (required, ranges)
 
 \subsection{Session History Manipulation}
 
-5.4.2
+HTML was originally designed to be based on documents and hyperlinks
+between these distinct documents with each of them having a unique
+\abbr{URL}. This hyperlinked structure, however, does not suit well
+for web applications with dynamic content and interactively changing
+user interface.
+
+Two of the basic functionalities that users are accustomed to are
+bookmarking and going back in the session history. Traditionally these
+have been compromised in dynamic \abbr{Ajax} applications or handled
+with a lot of extra work.
+
+HTML5 addresses these issues by allowing the developers dynamically
+manipulate the session history. The history stack can be changed and
+used for navigation and even the browser address bar can be changed
+without extra page refreshes.
 
 \subsection{Offline Web Applications}
 
