Add start to svg/mathml section.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -354,7 +354,8 @@ without extra page refreshes.
 
 \subsubsection{SVG and MathML}
 
-
+While not part of the HTML5 standard, the specification allows for
+embedding \abbr{SVG} and \abbr{MathML} markup within HTML.
 
 \subsection{Notes}
 
@@ -363,9 +364,6 @@ without extra page refreshes.
 \item postMessage()
 \item sandboxing
 \item content/protocol handlers 6.5.1.3
-\item getElementsbyClassName()
-\item classList
-\item microdata (WHATWG)
 \end{itemize}
 
 \section{Other related APIs}
