--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -130,3 +130,30 @@
   type={{W3C} {E}ditor's {D}raft},
   institution={W3C},
 }
+@TechReport{offlinedraft,
+  author={van Kesteren, A. and Hickson, I.},
+  title={{O}ffline {W}eb {A}pplications},
+  month={Feb},
+  note={Available at: \url{http://dev.w3.org/html5/offline-webapps/}. Accessed 6-February-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{webstoragedraft,
+  author={Hickson, I.},
+  title={{W}eb {S}torage},
+  month={Feb},
+  note={Available at: \url{http://dev.w3.org/html5/webstorage/}. Accessed 6-February-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{indexedDBdraft,
+  author={Mehta, N. and Sicking, J. and Graff, E. and Popescu, A. and Orlow, J.},
+  title={Indexed Database API},
+  month={Feb},
+  note={Available at: \url{http://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html}. Accessed 6-February-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
