--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -119,7 +119,7 @@
   note={Available at: \url{http://dev.w3.org/html5/spec/Overview.html}. Accessed 31-January-2012},
   year={2012},
   type={{W3C} {E}ditor's {D}raft},
-  institution={W3C},
+  institution={W3C}
 }
 @TechReport{canvas2Ddraft,
   author={Hickson, I.},
@@ -128,7 +128,7 @@
   note={Available at: \url{http://dev.w3.org/html5/2dcontext/}. Accessed 2-February-2012},
   year={2012},
   type={{W3C} {E}ditor's {D}raft},
-  institution={W3C},
+  institution={W3C}
 }
 @TechReport{offlinedraft,
   author={van Kesteren, A. and Hickson, I.},
@@ -150,10 +150,28 @@
 }
 @TechReport{indexedDBdraft,
   author={Mehta, N. and Sicking, J. and Graff, E. and Popescu, A. and Orlow, J.},
-  title={Indexed Database API},
+  title={{I}ndexed {D}atabase {API}},
   month={Feb},
   note={Available at: \url{http://dvcs.w3.org/hg/IndexedDB/raw-file/tip/Overview.html}. Accessed 6-February-2012},
   year={2012},
   type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@TechReport{MathML,
+  author={Carlisle, D. and Ion, P. and Miner R.},
+  title={{M}athematical {M}arkup {L}anguage ({M}ath{ML}) {V}ersion 3.0},
+  month={Oct},
+  note={Available at: \url{http://www.w3.org/TR/MathML/}. Accessed 6-February-2012},
+  year={2010},
+  type={{W3C} {R}ecommendation},
+  institution={W3C},
+}
+@TechReport{SVGTiny12,
+  author={Andersson, O. and others},
+  title={{S}calable {V}ector {G}raphics ({SVG}) {T}iny 1.2 {S}pecification},
+  month={Dec},
+  note={Available at: \url{http://www.w3.org/TR/SVGTiny12/}. Accessed 6-Febuary-2012},
+  year={2008},
+  type={{W3C} {R}ecommendation},
   institution={W3C},
 }
