--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -175,3 +175,12 @@
   type={{W3C} {R}ecommendation},
   institution={W3C},
 }
+@TechReport{geolocationAPI,
+  author={Popescu, A.},
+  title={{G}eolocation {API} {S}pecification},
+  month={Sep},
+  note={Available at: \url{http://www.w3.org/TR/geolocation-API/}. Accessed 6-Febuary-2012},
+  year={2010},
+  type={{W3C} {C}andidate {R}ecommendation},
+  institution={W3C},
+}
