Write intro to related apis.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -472,9 +472,17 @@ with it. Also, vector graphics can be scaled and fit the available
 space no matter the screen size, which improves the cross-platform
 usefulness for different device form factors.
 
-\section{Other related Specifications}
+\section{Other Related Specifications}
 
---
+There are lots of specifications related to HTML5 that are considered
+to be part of the practical view of all the new Web APIs that are
+often referred to as 'HTML5'. Some of these originate from the work of
+the \abbr{WHATWG} and some from the work of \abbr{W3C}, some have been
+part of HTML5 at some point but have been taken out of it into their
+own separate specifications, and some are just new specifications for
+the Web that relate to what we can do with HTML, CSS, and JavaScript
+in modern web applications. In the following sections, we introduce
+the specifications that are of interest within the topic of this work.
 
 \subsection{Graphics and Typography}
 
