Add media queries section in intro.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -494,7 +494,21 @@ the specifications that are of interest within the topic of this work.
 
 \subsubsection{Media Queries}
 
---
+Older versions of HTML and \abbr{CSS} have already supported targeting
+stylesheets and rules to certain media types like 'screen', 'print',
+or 'mobile'. Media queries expand on this technique by adding extra
+feature queries that can be used to apply styles for certain devices
+and screen sizes. \cite{mediaqueries}
+
+Media queries can be used to detect the device screen size and
+dimensions, orientation, aspect ratio, color depth,
+etc. \cite{mediaqueries}. Detecting these media features is especially
+useful when using the same HTML markup for different device types. For
+example, a layout of a web application might use more horizontal space
+when used on a desktop browser, but on a mobile device the fragments
+of the layout might be stacked vertically to avoid horizontal
+scrolling. Also background images might be swapped into smaller ones
+with smaller screens.
 
 \subsubsection{WebGL}
 
