--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -184,3 +184,12 @@
   type={{W3C} {C}andidate {R}ecommendation},
   institution={W3C},
 }
+@TechReport{mediaqueries,
+  author={Wium Lie, H. and Çelik, T. and Glazman, D. and van Kesteren, A.},
+  title={{M}edia {Q}ueries},
+  month={Jul},
+  note={Available at: \url{http://www.w3.org/TR/css3-mediaqueries/}. Accessed 7-Febuary-2012},
+  year={2010},
+  type={{W3C} {C}andidate {R}ecommendation},
+  institution={W3C},
+}
