Add CSS fonts section in intro.

--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -516,7 +516,14 @@ with smaller screens.
 
 \subsubsection{Web Fonts}
 
---
+Typography is an essential part of design. Traditionally web designers
+have been constrained into only a few ``web safe'' fonts that are
+known to be widely supported between different browsers and platforms.
+
+CSS3 defines techniques to dynamically load custom fonts and specify
+their properties \cite{cssfonts}. However, different browsers still
+use different formats and developers might have to provide the custom
+font files in all the formats that they want to support.
 
 \subsection{Interaction and Messaging}
 
