--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -193,3 +193,12 @@
   type={{W3C} {C}andidate {R}ecommendation},
   institution={W3C},
 }
+@TechReport{cssfonts,
+  author={Daggett, J.},
+  title={{CSS} {F}onts {M}odule {L}evel 3},
+  month={Oct},
+  note={Available at: \url{http://dev.w3.org/csswg/css3-fonts/}. Accessed 7-Febuary-2012},
+  year={2011},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
