--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -202,3 +202,12 @@
   type={{W3C} {E}ditor's {D}raft},
   institution={W3C},
 }
+@TechReport{touchevents,
+  author={Brubeck, M. and Moon, S. and Schepers, D.},
+  title={{T}ouch {E}vents version 1},
+  month={Dec},
+  note={Available at: \url{http://www.w3.org/TR/touch-events/}. Accessed 7-Febuary-2012},
+  year={2011},
+  type={{W3C} {C}andidate {R}ecommendation},
+  institution={W3C},
+}
