--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -211,3 +211,28 @@
   type={{W3C} {C}andidate {R}ecommendation},
   institution={W3C},
 }
+@TechReport{WebGL,
+  author={Marrin, C.},
+  title={{W}eb{GL} {S}pecification},
+  month={Jan},
+  note={Available at: \url{https://www.khronos.org/registry/webgl/specs/latest/}. Accessed 8-Febuary-2012},
+  year={2012},
+  type={{E}ditor's {D}raft},
+  institution={},
+}
+@TechReport{OpenGL,
+  author={Munshi, A. and Leech, J.},
+  title={{O}pen{GL}® {ES} {C}ommon {P}rofile {S}pecification {V}ersion 2.0.25},
+  month={Nov},
+  note={Available at: \url{http://www.khronos.org/registry/gles/specs/2.0/es_full_spec_2.0.25.pdf}. Accessed 8-Febuary-2012},
+  year={2010},
+  type={{C}ommon {P}rofile {S}pecification},
+}
+@TechReport{TypedArrays,
+  author={Herman, D. and Russell, K.},
+  title={{T}yped {A}rray {S}pecification},
+  month={Dec},
+  note={Available at: \url{https://www.khronos.org/registry/typedarray/specs/latest/}. Accessed 8-Febuary-2012},
+  year={2011},
+  type={{E}ditor's {D}raft},
+}
