--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -236,3 +236,18 @@
   year={2011},
   type={{E}ditor's {D}raft},
 }
+@TechReport{WebSockets,
+  author={Hickson, I.},
+  title={{T}he {W}eb{S}ocket {API}},
+  month={Feb},
+  note={Available at: \url{http://dev.w3.org/html5/websockets/}. Accessed 8-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@article{WebSocketProtocol,
+  title={{RFC} 6455: {T}he {W}eb{S}ocket protocol},
+  author={Fette, I.},
+  journal={Status: Internet Draft},
+  note={Available at: \url{http://tools.ietf.org/html/draft-ietf-hybi-thewebsocketprotocol-17}. Accessed 8-February-2012}
+}
