--- a/thesis/introduction.tex
+++ b/thesis/introduction.tex
@@ -630,7 +630,9 @@ possible security issues into account. \cite{WebSocketProtocol}
 
 \subsubsection{Web Workers}
 
---
+
+
+\cite{asanovic2009view} \cite{WebWorkers}
 
 \subsubsection{Timing}
 
