--- a/thesis/sources.bib
+++ b/thesis/sources.bib
@@ -251,3 +251,22 @@
   journal={Status: Internet Draft},
   note={Available at: \url{http://tools.ietf.org/html/draft-ietf-hybi-thewebsocketprotocol-17}. Accessed 8-February-2012}
 }
+@TechReport{WebWorkers,
+  author={Hickson, I.},
+  title={{W}eb {W}orkers},
+  month={Feb},
+  note={Available at: \url{http://dev.w3.org/html5/workers/}. Accessed 9-Febuary-2012},
+  year={2012},
+  type={{W3C} {E}ditor's {D}raft},
+  institution={W3C},
+}
+@article{asanovic2009view,
+  title={{A} {V}iew of the {P}arallel {C}omputing {L}andscape},
+  author={Asanovic, K. and Bodik, R. and Demmel, J. and Keaveny, T. and Keutzer, K. and Kubiatowicz, J. and Morgan, N. and Patterson, D. and Sen, K. and Wawrzynek, J. and others},
+  journal={Communications of the ACM},
+  volume={52},
+  number={10},
+  pages={56--67},
+  year={2009},
+  publisher={ACM}
+}
